Bug 1347538 - Don't reject seeks with EOS. r=kinetik a=jcristau

The MediaDecoderStateMachine treat seek's EOS as fatal errors, so instead we always resolve the seek promise, and let the next GetSample return EOS.

MozReview-Commit-ID: 6MGaJ3C8xrH